Redesigned expand system that scales horizontally better

--- a/style.scss
+++ b/style.scss
@@ -177,8 +177,9 @@ section {
     background-color: rgb(242, 253, 241, 0.1);
 }
 
-#about-me {
-    min-height: 50vw;
+#about-me {     
+    min-height: 10vw; ////////////////////////////////////////////// < OLIVER :)
+    // padding-bottom: 5em;
 }
 
 p {
@@ -394,8 +395,8 @@ footer {
     }
     .desk-page-sub {
         display: block;
-        position: fixed;
-        top: 12em;
+        position: absolute;
+        top: 8em;
         font-family: $monaco;
         font-size: 1.2em;
         color: $dark-purple;
@@ -436,19 +437,58 @@ footer {
     }
     /////////////// EXPAND SYMBOL ON TOP RIGHT
     ////SECTION 1
+        // .expand-1 {
+        //     z-index: 50;
+        //     display: inline-block;
+        //     opacity: 1;
+        //     color: $purple;
+        //     font-size: 1.5em;
+        //     position: absolute;
+        //     right: 1.3em;
+        //     top: 2.5em;   ///// POSITION OF EXPAND ICON
+        // }
+        // #expand-1 {
+        //     display: none;
+        //     transition: 2s;
+        // }
+        // #expand-1:checked ~ #sec-1 { //EXPANDS SECTION WHEN CLICK ICON
+        //     background-color: $white;
+        //     width: 100vw;
+        //     max-height: 100em;   /////////// THIS ANIMATED THE TRANSITION IN HEIGHT!
+        //     flex-wrap: nowrap;
+        //     -webkit-mask-image: none; // turn off transparent gradient
+        //     mask-image: none;
+        // }
+        // #expand-icon-1 {
+        //     display: inline-block;
+        //     transition: 0.1s;
+        // }
+        // #expand-text-1 {
+        //     display: inline-block;
+        //     font-family: 'Monaco', monospace;
+        //     font-size: 1em;
+        //     right: 0.8em;
+        //     top: 3.7em;
+        //     line-height: 0.8em;     ///// reduces vertical space - text
+        // }
+        // #expand-icon-1:hover {
+        //     transform: scale(1.2); // grows icon
+        // }
+
+
         .expand-1 {
             z-index: 50;
             display: inline-block;
             opacity: 1;
             color: $purple;
             font-size: 1.5em;
-            position: absolute;
-            right: 1.3em;
-            top: 2.5em;   ///// POSITION OF EXPAND ICON
+            position: relative;   //// allowed icons
+            left: 28.5em;         //// to move when
+            top: 3.5em;           //// expanded!
         }
         #expand-1 {
             display: none;
-            transition: 2s;
+            // transition: 2s;
         }
         #expand-1:checked ~ #sec-1 { //EXPANDS SECTION WHEN CLICK ICON
             background-color: $white;
@@ -460,18 +500,16 @@ footer {
         }
         #expand-icon-1 {
             display: inline-block;
-            transition: 0.1s;
-        }
-        #expand-text-1 {
-            display: inline-block;
             font-family: 'Monaco', monospace;
             font-size: 1em;
-            right: 0.8em;
-            top: 3.7em;
-            line-height: 0.8em;     ///// reduces vertical space - text
+            top: 5.5em;   //// moves text with icon
+            left: 40vw; //// moves text with icon
+            opacity: 0.2;
+            transition: 0.1s;
         }
         #expand-icon-1:hover {
-            transform: scale(1.2); // grows icon
+            transform: scale(1.02); // grows icon
+            opacity: 0.5;
         }
         ////////
         ////////SECTION 2
@@ -481,16 +519,13 @@ footer {
             opacity: 1;
             color: $purple;
             font-size: 1.5em;
-            // position: absolute;
-            // right: 1.3em;
-            // top: 19.5em;    ///// POSITION OF EXPAND ICON
             position: relative;   //// allowed icons
             left: 28.5em;         //// to move when
             top: 3.5em;           //// expanded!
         }
         #expand-2 {
             display: none;
-            transition: 2s;
+            // transition: 2s;
         }
         #expand-2:checked ~ #sec-2 { //EXPANDS SECTION WHEN CLICK ICON
             background-color: $white;
@@ -502,20 +537,16 @@ footer {
         }
         #expand-icon-2 {
             display: inline-block;
-            transition: 0.1s;
-        }
-        #expand-text-2 {
-            display: inline-block;
             font-family: 'Monaco', monospace;
             font-size: 1em;
-            // right: 0.8em;
-            // top: 3.7em;
-            top: 8.5em;   //// moves text with icon
-            left: 45.1em; //// moves text with icon
-            line-height: 0.8em;     ///// reduces vertical space - text
+            top: 5.5em;   //// moves text with icon
+            left: 40vw; //// moves text with icon
+            opacity: 0.2;
+            transition: 0.1s;
         }
         #expand-icon-2:hover {
-            transform: scale(1.2); // grows icon
+            transform: scale(1.02); // grows icon
+            opacity: 0.5;
         }
         /////////SECTION 3
         .expand-3 {
@@ -530,7 +561,7 @@ footer {
         }
         #expand-3 {
             display: none;
-            transition: 2s;
+            // transition: 2s;
         }
         #expand-3:checked ~ #sec-3 { //EXPANDS SECTION WHEN CLICK ICON
             background-color: $white;
@@ -542,18 +573,16 @@ footer {
         }
         #expand-icon-3 {
             display: inline-block;
-            transition: 0.1s;
-        }
-        #expand-text-3 {
-            display: inline-block;
             font-family: 'Monaco', monospace;
             font-size: 1em;
-            top: 8.5em;   //// moves text with icon
-            left: 45.1em; //// moves text with icon
-            line-height: 0.8em;     ///// reduces vertical space - text
+            top: 5.5em;   //// moves text with icon
+            left: 40vw; //// moves text with icon
+            opacity: 0.2;
+            transition: 0.1s;
         }
         #expand-icon-3:hover {
-            transform: scale(1.2); // grows icon
+            transform: scale(1.02); // grows icon
+            opacity: 0.5;
         }
         ////////SECTION 4
         .expand-4 {
@@ -568,7 +597,7 @@ footer {
         }
         #expand-4 {
             display: none;
-            transition: 2s;
+            // transition: 2s;
         }
         #expand-4:checked ~ #sec-4 { //EXPANDS SECTION WHEN CLICK ICON
             background-color: $white;
@@ -580,18 +609,16 @@ footer {
         }
         #expand-icon-4 {
             display: inline-block;
-            transition: 0.1s;
-        }
-        #expand-text-4 {
-            display: inline-block;
             font-family: 'Monaco', monospace;
             font-size: 1em;
-            top: 8.5em;   //// moves text with icon
-            left: 45.1em; //// moves text with icon
-            line-height: 0.8em;     ///// reduces vertical space - text
+            top: 5.5em;   //// moves text with icon
+            left: 40vw; //// moves text with icon
+            opacity: 0.2;
+            transition: 0.1s;
         }
         #expand-icon-4:hover {
-            transform: scale(1.2); // grows icon
+            transform: scale(1.02); // grows icon
+            opacity: 0.5;
         }
         /////////SECTION 5
         .expand-5 {
@@ -606,7 +633,7 @@ footer {
         }
         #expand-5 {
             display: none;
-            transition: 2s;
+            // transition: 2s;
         }
         #expand-5:checked ~ #sec-5 { //EXPANDS SECTION WHEN CLICK ICON
             background-color: $white;
@@ -618,18 +645,16 @@ footer {
         }
         #expand-icon-5 {
             display: inline-block;
-            transition: 0.1s;
-        }
-        #expand-text-5 {
-            display: inline-block;
             font-family: 'Monaco', monospace;
             font-size: 1em;
-            top: 8.5em;   //// moves text with icon
-            left: 45.1em; //// moves text with icon
-            line-height: 0.8em;     ///// reduces vertical space - text
+            top: 5.5em;   //// moves text with icon
+            left: 40vw; //// moves text with icon
+            opacity: 0.2;
+            transition: 0.1s;
         }
         #expand-icon-5:hover {
-            transform: scale(1.2); // grows icon
+            transform: scale(1.02); // grows icon
+            opacity: 0.5;
         }
 /////////////// section-1
 
