--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@ section h2 {
 }
 
 #about-me {
-  min-height: 50vw;
+  min-height: 10vw;
 }
 
 p {
@@ -340,8 +340,8 @@ footer #contact-button {
 
   .desk-page-sub {
     display: block;
-    position: fixed;
-    top: 12em;
+    position: absolute;
+    top: 8em;
     font-family: "Monaco", monospace;
     font-size: 1.2em;
     color: rgb(53, 0, 213);
@@ -401,14 +401,13 @@ footer #contact-button {
     opacity: 1;
     color: rgb(64, 0, 255);
     font-size: 1.5em;
-    position: absolute;
-    right: 1.3em;
-    top: 2.5em;
+    position: relative;
+    left: 28.5em;
+    top: 3.5em;
   }
 
   #expand-1 {
     display: none;
-    transition: 2s;
   }
 
   #expand-1:checked ~ #sec-1 {
@@ -422,20 +421,17 @@ footer #contact-button {
 
   #expand-icon-1 {
     display: inline-block;
+    font-family: "Monaco", monospace;
+    font-size: 1em;
+    top: 5.5em;
+    left: 40vw;
+    opacity: 0.2;
     transition: 0.1s;
   }
 
-  #expand-text-1 {
-    display: inline-block;
-    font-family: "Monaco", monospace;
-    font-size: 1em;
-    right: 0.8em;
-    top: 3.7em;
-    line-height: 0.8em;
-  }
-
   #expand-icon-1:hover {
-    transform: scale(1.2);
+    transform: scale(1.02);
+    opacity: 0.5;
   }
 
   .expand-2 {
@@ -451,7 +447,6 @@ footer #contact-button {
 
   #expand-2 {
     display: none;
-    transition: 2s;
   }
 
   #expand-2:checked ~ #sec-2 {
@@ -465,20 +460,17 @@ footer #contact-button {
 
   #expand-icon-2 {
     display: inline-block;
+    font-family: "Monaco", monospace;
+    font-size: 1em;
+    top: 5.5em;
+    left: 40vw;
+    opacity: 0.2;
     transition: 0.1s;
   }
 
-  #expand-text-2 {
-    display: inline-block;
-    font-family: "Monaco", monospace;
-    font-size: 1em;
-    top: 8.5em;
-    left: 45.1em;
-    line-height: 0.8em;
-  }
-
   #expand-icon-2:hover {
-    transform: scale(1.2);
+    transform: scale(1.02);
+    opacity: 0.5;
   }
 
   .expand-3 {
@@ -494,7 +486,6 @@ footer #contact-button {
 
   #expand-3 {
     display: none;
-    transition: 2s;
   }
 
   #expand-3:checked ~ #sec-3 {
@@ -508,20 +499,17 @@ footer #contact-button {
 
   #expand-icon-3 {
     display: inline-block;
+    font-family: "Monaco", monospace;
+    font-size: 1em;
+    top: 5.5em;
+    left: 40vw;
+    opacity: 0.2;
     transition: 0.1s;
   }
 
-  #expand-text-3 {
-    display: inline-block;
-    font-family: "Monaco", monospace;
-    font-size: 1em;
-    top: 8.5em;
-    left: 45.1em;
-    line-height: 0.8em;
-  }
-
   #expand-icon-3:hover {
-    transform: scale(1.2);
+    transform: scale(1.02);
+    opacity: 0.5;
   }
 
   .expand-4 {
@@ -537,7 +525,6 @@ footer #contact-button {
 
   #expand-4 {
     display: none;
-    transition: 2s;
   }
 
   #expand-4:checked ~ #sec-4 {
@@ -551,20 +538,17 @@ footer #contact-button {
 
   #expand-icon-4 {
     display: inline-block;
+    font-family: "Monaco", monospace;
+    font-size: 1em;
+    top: 5.5em;
+    left: 40vw;
+    opacity: 0.2;
     transition: 0.1s;
   }
 
-  #expand-text-4 {
-    display: inline-block;
-    font-family: "Monaco", monospace;
-    font-size: 1em;
-    top: 8.5em;
-    left: 45.1em;
-    line-height: 0.8em;
-  }
-
   #expand-icon-4:hover {
-    transform: scale(1.2);
+    transform: scale(1.02);
+    opacity: 0.5;
   }
 
   .expand-5 {
@@ -580,7 +564,6 @@ footer #contact-button {
 
   #expand-5 {
     display: none;
-    transition: 2s;
   }
 
   #expand-5:checked ~ #sec-5 {
@@ -594,20 +577,17 @@ footer #contact-button {
 
   #expand-icon-5 {
     display: inline-block;
+    font-family: "Monaco", monospace;
+    font-size: 1em;
+    top: 5.5em;
+    left: 40vw;
+    opacity: 0.2;
     transition: 0.1s;
   }
 
-  #expand-text-5 {
-    display: inline-block;
-    font-family: "Monaco", monospace;
-    font-size: 1em;
-    top: 8.5em;
-    left: 45.1em;
-    line-height: 0.8em;
-  }
-
   #expand-icon-5:hover {
-    transform: scale(1.2);
+    transform: scale(1.02);
+    opacity: 0.5;
   }
 
   section:hover {
