--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 html, body {
-  height: 100vh;
+  min-height: 100vh;
 }
 
 body {
@@ -60,8 +60,11 @@ header #head-circle {
   border-radius: 50%;
 }
 
+#nav-mob {
+  z-index: 100;
+}
 #nav-mob #nav-icon-mob {
-  z-index: 4;
+  z-index: 100;
   position: fixed;
   top: 0.5em;
   left: 0.5em;
@@ -71,13 +74,15 @@ header #head-circle {
 #nav-mob #nav-links-mob {
   position: fixed;
   top: 5.1em;
-  left: -22.2em;
+  left: -30em;
   transition: 0.2s;
 }
 #nav-mob #nav-links-mob ul {
+  position: relative;
+  z-index: 100;
   height: 100vh;
   padding-right: 5em;
-  width: 85vw;
+  width: 100vw;
   background-color: rgb(242, 253, 241);
   box-shadow: 0em 0em 1em 5em rgb(242, 253, 241);
 }
@@ -98,7 +103,7 @@ header #head-circle {
 }
 #nav-mob #show:checked ~ #nav-links-mob {
   display: block;
-  transform: translateX(20em);
+  transform: translateX(25em);
 }
 
 #menu-button,
@@ -110,11 +115,13 @@ header #head-circle {
 main {
   margin: 2em;
   margin-top: 7em;
+  margin-bottom: 5em;
 }
 
 .mob-page-sub {
   display: block;
   position: absolute;
+  z-index: 1;
   top: 4.1em;
   right: 1em;
   font-family: "Monaco", monospace;
@@ -125,7 +132,7 @@ main {
   display: none;
 }
 
-section {
+.card {
   border-radius: 2em 2em 2em 2em;
   padding: 2em;
   margin: 0em;
@@ -133,14 +140,61 @@ section {
   background-color: rgba(242, 253, 241, 0.1);
   background-color: rgba(242, 253, 241, 0.1);
 }
-section h2 {
+.card h2 {
   color: rgb(67, 96, 64);
   text-align: left;
   left: 2em;
 }
 
-#about-me {
-  min-height: 10vw;
+#about-img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 80%;
+  border-radius: 2em 2em 2em 2em;
+}
+
+#about-card {
+  border-radius: 2em 2em 2em 2em;
+  padding: 2em;
+  margin: 0em;
+  margin-top: 2em;
+  background-color: rgba(242, 253, 241, 0.1);
+}
+#about-card h2 {
+  color: rgb(67, 96, 64);
+  text-align: left;
+  left: 2em;
+}
+
+#about-buttons {
+  display: flex;
+  justify-content: space-between;
+  padding: 2em;
+}
+#about-buttons #personal-button-cont {
+  display: inline;
+}
+#about-buttons #personal-button-cont #personal-button {
+  background-color: rgb(64, 0, 255);
+  color: rgb(242, 253, 241);
+  border-radius: 0.4em 0.4em 0.4em 0.4em;
+  font-size: 1em;
+  padding: 0.5em;
+  border: none;
+  display: inline;
+}
+#about-buttons #projects-button-cont {
+  display: inline;
+}
+#about-buttons #projects-button-cont #projects-button {
+  background-color: rgb(64, 0, 255);
+  color: rgb(242, 253, 241);
+  border-radius: 0.4em 0.4em 0.4em 0.4em;
+  font-size: 1em;
+  padding: 0.5em;
+  border: none;
+  display: inline;
 }
 
 p {
@@ -166,15 +220,15 @@ footer form {
   bottom: 0em;
 }
 footer #contact-button {
-  position: fixed;
-  bottom: 0.5em;
-  right: 0.5em;
   background-color: rgb(64, 0, 255);
   color: rgb(242, 253, 241);
   border-radius: 0.4em 0.4em 0.4em 0.4em;
   font-size: 1em;
   padding: 0.5em;
   border: none;
+  position: fixed;
+  bottom: 0.5em;
+  right: 0.5em;
 }
 
 #expand-1,
@@ -324,10 +378,9 @@ footer #contact-button {
 
   main {
     position: relative;
-    margin-bottom: 30em;
+    margin-bottom: 10em;
     margin-top: -2em;
     transition: 0.5s;
-    height: 150vh;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -347,7 +400,7 @@ footer #contact-button {
     color: rgb(53, 0, 213);
   }
 
-  section {
+  .card {
     border-radius: 2em 2em 2em 2em;
     padding: 2em;
     margin: 0em;
@@ -360,13 +413,23 @@ footer #contact-button {
     transition: 0.5s;
     overflow: hidden;
     position: relative;
+    background-color: rgba(242, 253, 241, 0.1);
+    margin: 2em 0em 0em 2em;
+    width: 100vw;
+    max-height: 40vw;
+    transition: 0.5s;
+    overflow: hidden;
+    position: relative;
   }
-  section h2 {
+  .card h2 {
     color: rgb(67, 96, 64);
     text-align: left;
     left: 2em;
   }
-  section h2 {
+  .card h2 {
+    color: rgb(67, 96, 64);
+  }
+  .card h2 {
     color: rgb(67, 96, 64);
   }
 
@@ -590,7 +653,7 @@ footer #contact-button {
     opacity: 0.5;
   }
 
-  section:hover {
+  .card:hover {
     background-color: rgb(242, 253, 241);
     box-shadow: gray 0em 0em 2em;
     width: 100vw;
@@ -631,6 +694,114 @@ footer #contact-button {
     flex-wrap: nowrap;
   }
 
+  #about-img-cont {
+    border-radius: 2em 2em 2em 2em;
+    padding: 2em;
+    margin: 0em;
+    margin-top: 2em;
+    background-color: rgba(242, 253, 241, 0.1);
+    background-color: rgba(242, 253, 241, 0.1);
+    margin: 2em 0em 0em 2em;
+    width: 100vw;
+    max-height: 40vw;
+    transition: 0.5s;
+    overflow: hidden;
+    position: relative;
+    background: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+  #about-img-cont h2 {
+    color: rgb(67, 96, 64);
+    text-align: left;
+    left: 2em;
+  }
+  #about-img-cont h2 {
+    color: rgb(67, 96, 64);
+  }
+  #about-img-cont #about-img {
+    border-radius: 2em 2em 2em 2em;
+    max-width: 50vw;
+  }
+
+  #about-card {
+    border-radius: 2em 2em 2em 2em;
+    padding: 2em;
+    margin: 0em;
+    margin-top: 2em;
+    background-color: rgba(242, 253, 241, 0.1);
+    background-color: rgba(242, 253, 241, 0.1);
+    margin: 2em 0em 0em 2em;
+    width: 100vw;
+    max-height: 40vw;
+    transition: 0.5s;
+    overflow: hidden;
+    position: relative;
+  }
+  #about-card h2 {
+    color: rgb(67, 96, 64);
+    text-align: left;
+    left: 2em;
+  }
+  #about-card h2 {
+    color: rgb(67, 96, 64);
+  }
+
+  #about-buttons {
+    border-radius: 2em 2em 2em 2em;
+    padding: 2em;
+    margin: 0em;
+    margin-top: 2em;
+    background-color: rgba(242, 253, 241, 0.1);
+    background-color: rgba(242, 253, 241, 0.1);
+    margin: 2em 0em 0em 2em;
+    width: 100vw;
+    max-height: 40vw;
+    transition: 0.5s;
+    overflow: hidden;
+    position: relative;
+    background: none;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+  }
+  #about-buttons h2 {
+    color: rgb(67, 96, 64);
+    text-align: left;
+    left: 2em;
+  }
+  #about-buttons h2 {
+    color: rgb(67, 96, 64);
+  }
+  #about-buttons #personal-button-cont #personal-button {
+    background-color: rgb(53, 0, 213);
+    color: rgb(242, 253, 241);
+    border-radius: 0.4em 0.4em 0.4em 0.4em;
+    font-size: 1em;
+    padding: 0.5em;
+    border: none;
+    transition: 0.1s;
+  }
+  #about-buttons #personal-button-cont #personal-button:hover {
+    cursor: pointer;
+    background-color: rgb(64, 0, 255);
+  }
+  #about-buttons #projects-button-cont #projects-button {
+    background-color: rgb(53, 0, 213);
+    color: rgb(242, 253, 241);
+    border-radius: 0.4em 0.4em 0.4em 0.4em;
+    font-size: 1em;
+    padding: 0.5em;
+    border: none;
+    transition: 0.1s;
+  }
+  #about-buttons #projects-button-cont #projects-button:hover {
+    cursor: pointer;
+    background-color: rgb(64, 0, 255);
+  }
+
   p {
     font-size: 1.2em;
   }
@@ -658,9 +829,6 @@ footer #contact-button {
     bottom: 0em;
   }
   footer #contact-button {
-    position: fixed;
-    bottom: 0.5em;
-    right: 0.5em;
     background-color: rgb(53, 0, 213);
     color: rgb(242, 253, 241);
     border-radius: 0.4em 0.4em 0.4em 0.4em;
@@ -668,6 +836,9 @@ footer #contact-button {
     padding: 0.5em;
     border: none;
     transition: 0.1s;
+    position: fixed;
+    bottom: 0.5em;
+    right: 0.5em;
   }
   footer #contact-button:hover {
     cursor: pointer;
