True  variable, reduced red bg gradient

--- a/style.css
+++ b/style.css
@@ -10,10 +10,10 @@ html, body {
 
 body {
   position: relative;
-  background-color: rgb(242, 253, 241);
+  background-color: white;
   font-family: "Karla", sans-serif;
   font-size: 16px;
-  background-image: radial-gradient(circle at bottom right, #e66465 10%, rgb(242, 253, 241), rgb(242, 253, 241));
+  background-image: radial-gradient(circle at bottom right, #e66465 10%, white, white);
   background-attachment: fixed;
 }
 
@@ -23,7 +23,7 @@ header {
   top: 0;
   width: 100vw;
   height: 5.8em;
-  background-color: rgb(242, 253, 241);
+  background-color: white;
   backdrop-filter: blur(0.2em);
   box-shadow: 0 0 0.2em gray;
 }
@@ -83,8 +83,8 @@ header #head-circle {
   height: 100vh;
   padding-right: 5em;
   width: 100vw;
-  background-color: rgb(242, 253, 241);
-  box-shadow: 0em 0em 1em 5em rgb(242, 253, 241);
+  background-color: white;
+  box-shadow: 0em 0em 1em 5em white;
 }
 #nav-mob #nav-links-mob li {
   list-style: none;
@@ -177,7 +177,7 @@ main {
 }
 #about-buttons #personal-button-cont #personal-button {
   background-color: rgb(64, 0, 255);
-  color: rgb(242, 253, 241);
+  color: white;
   border-radius: 0.4em 0.4em 0.4em 0.4em;
   font-size: 1em;
   padding: 0.5em;
@@ -189,7 +189,7 @@ main {
 }
 #about-buttons #projects-button-cont #projects-button {
   background-color: rgb(64, 0, 255);
-  color: rgb(242, 253, 241);
+  color: white;
   border-radius: 0.4em 0.4em 0.4em 0.4em;
   font-size: 1em;
   padding: 0.5em;
@@ -209,19 +209,19 @@ footer {
   position: fixed;
   bottom: 0em;
   text-align: center;
-  background-color: rgb(242, 253, 241);
+  background-color: white;
   width: 100vw;
   box-shadow: 0 0 0.2em gray;
 }
 footer form {
-  background-color: rgb(242, 253, 241);
+  background-color: white;
   width: 3em;
   height: 3em;
   bottom: 0em;
 }
 footer #contact-button {
   background-color: rgb(64, 0, 255);
-  color: rgb(242, 253, 241);
+  color: white;
   border-radius: 0.4em 0.4em 0.4em 0.4em;
   font-size: 1em;
   padding: 0.5em;
@@ -300,7 +300,7 @@ footer #contact-button {
     display: block;
     position: absolute;
     left: -30vw;
-    background-color: rgb(242, 253, 241);
+    background-color: white;
     height: 50em;
     width: 30vw;
     transition: 0.5s;
@@ -363,7 +363,7 @@ footer #contact-button {
   #arrow {
     position: absolute;
     left: 0.1em;
-    -webkit-text-stroke: 8px rgb(242, 253, 241);
+    -webkit-text-stroke: 8px white;
     transform: scale(1.2, 1);
   }
 
@@ -372,7 +372,7 @@ footer #contact-button {
   }
 
   body {
-    background-image: radial-gradient(circle at bottom right, #e66465 10%, rgb(242, 253, 241), rgb(242, 253, 241));
+    background-image: radial-gradient(circle at bottom right, #e66465 -30%, white, white);
     overflow-x: hidden;
   }
 
@@ -474,7 +474,7 @@ footer #contact-button {
   }
 
   #expand-1:checked ~ #sec-1 {
-    background-color: rgb(242, 253, 241);
+    background-color: white;
     width: 100vw;
     max-height: 100em;
     flex-wrap: nowrap;
@@ -513,7 +513,7 @@ footer #contact-button {
   }
 
   #expand-2:checked ~ #sec-2 {
-    background-color: rgb(242, 253, 241);
+    background-color: white;
     width: 100vw;
     max-height: 100em;
     flex-wrap: nowrap;
@@ -552,7 +552,7 @@ footer #contact-button {
   }
 
   #expand-3:checked ~ #sec-3 {
-    background-color: rgb(242, 253, 241);
+    background-color: white;
     width: 100vw;
     max-height: 100em;
     flex-wrap: nowrap;
@@ -591,7 +591,7 @@ footer #contact-button {
   }
 
   #expand-4:checked ~ #sec-4 {
-    background-color: rgb(242, 253, 241);
+    background-color: white;
     width: 100vw;
     max-height: 100em;
     flex-wrap: nowrap;
@@ -630,7 +630,7 @@ footer #contact-button {
   }
 
   #expand-5:checked ~ #sec-5 {
-    background-color: rgb(242, 253, 241);
+    background-color: white;
     width: 100vw;
     max-height: 100em;
     flex-wrap: nowrap;
@@ -654,41 +654,41 @@ footer #contact-button {
   }
 
   .card:hover {
-    background-color: rgb(242, 253, 241);
+    background-color: white;
     box-shadow: gray 0em 0em 2em;
     width: 100vw;
   }
 
   #expand-1:hover ~ #sec-1 {
-    background-color: rgb(242, 253, 241);
+    background-color: white;
     box-shadow: gray 0em 0em 2em;
     width: 100vw;
     flex-wrap: nowrap;
   }
 
   #expand-2:hover ~ #sec-2 {
-    background-color: rgb(242, 253, 241);
+    background-color: white;
     box-shadow: gray 0em 0em 2em;
     width: 100vw;
     flex-wrap: nowrap;
   }
 
   #expand-3:hover ~ #sec-3 {
-    background-color: rgb(242, 253, 241);
+    background-color: white;
     box-shadow: gray 0em 0em 2em;
     width: 100vw;
     flex-wrap: nowrap;
   }
 
   #expand-4:hover ~ #sec-4 {
-    background-color: rgb(242, 253, 241);
+    background-color: white;
     box-shadow: gray 0em 0em 2em;
     width: 100vw;
     flex-wrap: nowrap;
   }
 
   #expand-5:hover ~ #sec-5 {
-    background-color: rgb(242, 253, 241);
+    background-color: white;
     box-shadow: gray 0em 0em 2em;
     width: 100vw;
     flex-wrap: nowrap;
@@ -778,7 +778,7 @@ footer #contact-button {
   }
   #about-buttons #personal-button-cont #personal-button {
     background-color: rgb(53, 0, 213);
-    color: rgb(242, 253, 241);
+    color: white;
     border-radius: 0.4em 0.4em 0.4em 0.4em;
     font-size: 1em;
     padding: 0.5em;
@@ -791,7 +791,7 @@ footer #contact-button {
   }
   #about-buttons #projects-button-cont #projects-button {
     background-color: rgb(53, 0, 213);
-    color: rgb(242, 253, 241);
+    color: white;
     border-radius: 0.4em 0.4em 0.4em 0.4em;
     font-size: 1em;
     padding: 0.5em;
@@ -819,19 +819,19 @@ footer #contact-button {
     position: fixed;
     bottom: 0em;
     text-align: center;
-    background-color: rgb(242, 253, 241);
+    background-color: white;
     width: 150vw;
     border: rgb(183, 183, 183) 1px solid;
   }
   footer form {
-    background-color: rgb(242, 253, 241);
+    background-color: white;
     width: 3em;
     height: 3em;
     bottom: 0em;
   }
   footer #contact-button {
     background-color: rgb(53, 0, 213);
-    color: rgb(242, 253, 241);
+    color: white;
     border-radius: 0.4em 0.4em 0.4em 0.4em;
     font-size: 1em;
     padding: 0.5em;
