--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
   background-color: white;
   font-family: "Karla", sans-serif;
   font-size: 16px;
-  background-image: radial-gradient(circle at bottom right, #e66465 10%, white, white);
+  background-image: radial-gradient(circle at bottom right, #e66465 -30%, white, white);
   background-attachment: fixed;
 }
 
@@ -426,6 +426,11 @@ footer #contact-button {
     text-align: left;
     left: 2em;
   }
+  .card:hover {
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.1) 0em 0em 1em;
+    width: 100vw;
+  }
   .card h2 {
     color: rgb(67, 96, 64);
   }
@@ -653,47 +658,6 @@ footer #contact-button {
     opacity: 0.5;
   }
 
-  .card:hover {
-    background-color: white;
-    box-shadow: gray 0em 0em 2em;
-    width: 100vw;
-  }
-
-  #expand-1:hover ~ #sec-1 {
-    background-color: white;
-    box-shadow: gray 0em 0em 2em;
-    width: 100vw;
-    flex-wrap: nowrap;
-  }
-
-  #expand-2:hover ~ #sec-2 {
-    background-color: white;
-    box-shadow: gray 0em 0em 2em;
-    width: 100vw;
-    flex-wrap: nowrap;
-  }
-
-  #expand-3:hover ~ #sec-3 {
-    background-color: white;
-    box-shadow: gray 0em 0em 2em;
-    width: 100vw;
-    flex-wrap: nowrap;
-  }
-
-  #expand-4:hover ~ #sec-4 {
-    background-color: white;
-    box-shadow: gray 0em 0em 2em;
-    width: 100vw;
-    flex-wrap: nowrap;
-  }
-
-  #expand-5:hover ~ #sec-5 {
-    background-color: white;
-    box-shadow: gray 0em 0em 2em;
-    width: 100vw;
-    flex-wrap: nowrap;
-  }
-
   #about-img-cont {
     border-radius: 2em 2em 2em 2em;
     padding: 2em;
@@ -707,6 +671,7 @@ footer #contact-button {
     transition: 0.5s;
     overflow: hidden;
     position: relative;
+    pointer-events: none;
     background: none;
     display: flex;
     flex-direction: row;
@@ -716,6 +681,11 @@ footer #contact-button {
     color: rgb(67, 96, 64);
     text-align: left;
     left: 2em;
+  }
+  #about-img-cont:hover {
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.1) 0em 0em 1em;
+    width: 100vw;
   }
   #about-img-cont h2 {
     color: rgb(67, 96, 64);
@@ -744,6 +714,11 @@ footer #contact-button {
     color: rgb(67, 96, 64);
     text-align: left;
     left: 2em;
+  }
+  #about-card:hover {
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.1) 0em 0em 1em;
+    width: 100vw;
   }
   #about-card h2 {
     color: rgb(67, 96, 64);
@@ -784,6 +759,7 @@ footer #contact-button {
     padding: 0.5em;
     border: none;
     transition: 0.1s;
+    pointer-events: auto;
   }
   #about-buttons #personal-button-cont #personal-button:hover {
     cursor: pointer;
@@ -797,6 +773,7 @@ footer #contact-button {
     padding: 0.5em;
     border: none;
     transition: 0.1s;
+    pointer-events: auto;
   }
   #about-buttons #projects-button-cont #projects-button:hover {
     cursor: pointer;
